--- a/src/airbooks/view/cart-tile.fxml
+++ b/src/airbooks/view/cart-tile.fxml
@@ -5,25 +5,20 @@
 <?import javafx.scene.image.Image?>
 <?import javafx.scene.image.ImageView?>
 <?import javafx.scene.layout.*?>
-<AnchorPane stylesheets="@style.css" prefHeight="50.0" prefWidth="300.0"
-            style="-fx-border-color: black; -fx-background-color: white;" xmlns="http://javafx.com/javafx/15.0.1"
-            xmlns:fx="http://javafx.com/fxml/1" fx:controller="airbooks.controller.CartTileController"
-            fx:id="cartTileAP">
+<AnchorPane fx:id="cartTileAP" prefHeight="50.0" prefWidth="300.0" style="-fx-border-color: black; -fx-background-color: white;" stylesheets="@style.css" xmlns="http://javafx.com/javafx/15.0.1" xmlns:fx="http://javafx.com/fxml/1" fx:controller="airbooks.controller.CartTileController">
    <VBox alignment="CENTER" prefHeight="50.0" prefWidth="250.0">
       <Label fx:id="bookTitleLabel" alignment="CENTER" maxWidth="250.0" text="Book">
          <VBox.margin>
-            <Insets left="3.0" right="3.0"/>
+            <Insets left="5.0" right="5.0" />
          </VBox.margin>
       </Label>
       <Label fx:id="rentalInfoLabel" text="\$14.00, 14 days" textFill="DARKGRAY">
          <VBox.margin>
-            <Insets left="3.0" right="3.0" top="2.0"/>
+            <Insets left="3.0" right="3.0" top="2.0" />
          </VBox.margin>
       </Label>
    </VBox>
-   <ImageView fitHeight="40.0" fitWidth="200.0" onMouseClicked="#trashAction" pickOnBounds="true"
-              preserveRatio="true" AnchorPane.bottomAnchor="5.0" AnchorPane.rightAnchor="5.0"
-              AnchorPane.topAnchor="5.0">
-      <Image url="@../resources/img/delete.png"/>
+   <ImageView fitHeight="40.0" fitWidth="200.0" onMouseClicked="#trashAction" pickOnBounds="true" preserveRatio="true" AnchorPane.bottomAnchor="5.0" AnchorPane.rightAnchor="5.0" AnchorPane.topAnchor="5.0">
+      <Image url="@../resources/img/delete.png" />
    </ImageView>
 </AnchorPane>
