--- a/src/airbooks/view/checkout.fxml
+++ b/src/airbooks/view/checkout.fxml
@@ -1,20 +1,26 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
 <?import javafx.geometry.Insets?>
-<?import javafx.scene.control.*?>
-<?import javafx.scene.layout.*?>
+<?import javafx.scene.control.Button?>
+<?import javafx.scene.control.Hyperlink?>
+<?import javafx.scene.control.Label?>
+<?import javafx.scene.control.ScrollPane?>
+<?import javafx.scene.control.TextField?>
+<?import javafx.scene.layout.AnchorPane?>
+<?import javafx.scene.layout.BorderPane?>
+<?import javafx.scene.layout.FlowPane?>
+<?import javafx.scene.layout.VBox?>
 <?import javafx.scene.text.Font?>
-<BorderPane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="480.0" prefWidth="640.0" style="-fx-background-color: white;" stylesheets="@style.css" xmlns="http://javafx.com/javafx/16" xmlns:fx="http://javafx.com/fxml/1" fx:controller="airbooks.controller.CheckoutController">
+
+<BorderPane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="480.0" prefWidth="640.0" style="-fx-background-color: white;" stylesheets="@style.css" xmlns="http://javafx.com/javafx/15.0.1" xmlns:fx="http://javafx.com/fxml/1" fx:controller="airbooks.controller.CheckoutController">
    <top>
-      <FlowPane alignment="CENTER"
-                style="-fx-border-color: black; -fx-border-width: 0 0 1 0; -fx-background-color: lightcyan;"
-                BorderPane.alignment="CENTER">
+      <FlowPane alignment="CENTER" style="-fx-border-color: black; -fx-border-width: 0 0 1 0; -fx-background-color: lightcyan;" BorderPane.alignment="CENTER">
          <Label text="AirBooks - Checkout">
             <font>
-               <Font size="18.0"/>
+               <Font size="18.0" />
             </font>
             <FlowPane.margin>
-               <Insets bottom="3.0" top="3.0"/>
+               <Insets bottom="3.0" top="3.0" />
             </FlowPane.margin>
          </Label>
       </FlowPane>
@@ -23,31 +29,28 @@
       <VBox alignment="CENTER" fillWidth="false" prefHeight="200.0" prefWidth="100.0" BorderPane.alignment="CENTER">
          <Label text="Enter your Postal Code:">
             <font>
-               <Font size="15.0"/>
+               <Font size="15.0" />
             </font>
          </Label>
          <TextField fx:id="postalTF" maxHeight="-Infinity" maxWidth="-Infinity">
             <VBox.margin>
-               <Insets bottom="3.0" top="3.0"/>
+               <Insets bottom="3.0" top="3.0" />
             </VBox.margin>
          </TextField>
-         <Button mnemonicParsing="false" onAction="#findSCSAction" text="Find Collection Stations"/>
+         <Button mnemonicParsing="false" onAction="#findSCSAction" text="Find Collection Stations" />
          <ScrollPane hbarPolicy="NEVER" maxWidth="-Infinity" prefHeight="250.0" vbarPolicy="NEVER">
             <VBox.margin>
-               <Insets bottom="3.0" top="15.0"/>
+               <Insets bottom="3.0" top="15.0" />
             </VBox.margin>
-            <VBox fx:id="SCSListVBox" alignment="TOP_CENTER" maxWidth="-Infinity" minWidth="-Infinity"
-                  prefWidth="500.0"/>
+            <VBox fx:id="SCSListVBox" alignment="TOP_CENTER" maxWidth="-Infinity" minWidth="-Infinity" prefWidth="500.0" />
          </ScrollPane>
-         <Button fx:id="selectButton" mnemonicParsing="false" onAction="#chooseSCSAction" text="Select"/>
+         <Button fx:id="selectButton" mnemonicParsing="false" onAction="#chooseSCSAction" text="Select" visible="false" />
       </VBox>
    </center>
    <bottom>
       <AnchorPane style="-fx-border-color: black; -fx-border-width: 1 0 0 0;" BorderPane.alignment="CENTER">
-         <Label text="© NUS High School of Math and Science" AnchorPane.bottomAnchor="2.0" AnchorPane.leftAnchor="3.0"
-                AnchorPane.topAnchor="2.0"/>
-         <Hyperlink onAction="#aboutAction" text="About the Programmer..." AnchorPane.bottomAnchor="0.0"
-                    AnchorPane.rightAnchor="3.0" AnchorPane.topAnchor="0.0"/>
+         <Label text="© NUS High School of Math and Science" AnchorPane.bottomAnchor="2.0" AnchorPane.leftAnchor="3.0" AnchorPane.topAnchor="2.0" />
+         <Hyperlink onAction="#aboutAction" text="About the Programmer..." AnchorPane.bottomAnchor="0.0" AnchorPane.rightAnchor="3.0" AnchorPane.topAnchor="0.0" />
       </AnchorPane>
    </bottom>
 </BorderPane>
