--- a/src/airbooks/view/admin.fxml
+++ b/src/airbooks/view/admin.fxml
@@ -6,7 +6,7 @@
 <?import javafx.scene.image.ImageView?>
 <?import javafx.scene.layout.*?>
 <?import javafx.scene.text.Font?>
-<BorderPane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="720.0" prefWidth="1280.0" style="-fx-background-color: white;" stylesheets="@style.css" xmlns="http://javafx.com/javafx/15.0.1" xmlns:fx="http://javafx.com/fxml/1" fx:controller="airbooks.controller.AdminController">
+<BorderPane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="700.0" prefWidth="1280.0" style="-fx-background-color: white;" stylesheets="@style.css" xmlns="http://javafx.com/javafx/15.0.1" xmlns:fx="http://javafx.com/fxml/1" fx:controller="airbooks.controller.AdminController">
    <top>
       <GridPane style="-fx-background-color: lightcyan; -fx-border-width: 0 0 1 0; -fx-border-color: black;" BorderPane.alignment="CENTER">
          <columnConstraints>
@@ -63,31 +63,30 @@
          </Label>
          <VBox alignment="CENTER" maxHeight="-Infinity" maxWidth="-Infinity">
             <VBox.margin>
-               <Insets left="15.0" right="15.0"/>
+               <Insets left="15.0" right="15.0" />
             </VBox.margin>
             <FlowPane alignment="CENTER" style="-fx-border-color: black; -fx-border-width: 1 1 0 1;">
                <padding>
-                  <Insets bottom="5.0" top="5.0"/>
+                  <Insets bottom="5.0" top="5.0" />
                </padding>
                <Label text="Enter ISBN/Title:">
                   <FlowPane.margin>
-                     <Insets right="5.0"/>
+                     <Insets right="5.0" />
                   </FlowPane.margin>
                </Label>
                <TextField fx:id="searchTF" onKeyTyped="#searchAction">
                   <FlowPane.margin>
-                     <Insets left="5.0"/>
+                     <Insets left="5.0" />
                   </FlowPane.margin>
                </TextField>
             </FlowPane>
-            <ScrollPane hbarPolicy="NEVER" maxHeight="-Infinity" maxWidth="-Infinity" prefHeight="500.0"
-                        vbarPolicy="NEVER">
+            <ScrollPane hbarPolicy="NEVER" maxHeight="-Infinity" maxWidth="-Infinity" prefHeight="450.0" vbarPolicy="NEVER">
                <VBox.margin>
-                  <Insets/>
+                  <Insets />
                </VBox.margin>
                <VBox fx:id="bookViewVBox" maxWidth="-Infinity" minWidth="-Infinity" prefWidth="900.0">
                   <opaqueInsets>
-                     <Insets/>
+                     <Insets />
                   </opaqueInsets>
                </VBox>
             </ScrollPane>
