--- a/src/airbooks/view/student.fxml
+++ b/src/airbooks/view/student.fxml
@@ -6,7 +6,7 @@
 <?import javafx.scene.image.ImageView?>
 <?import javafx.scene.layout.*?>
 <?import javafx.scene.text.*?>
-<BorderPane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="720.0" prefWidth="1280.0" style="-fx-background-color: white;" stylesheets="@style.css" xmlns="http://javafx.com/javafx/15.0.1" xmlns:fx="http://javafx.com/fxml/1" fx:controller="airbooks.controller.StudentController">
+<BorderPane maxHeight="-Infinity" maxWidth="-Infinity" prefHeight="700.0" prefWidth="1280.0" style="-fx-background-color: white;" stylesheets="@style.css" xmlns="http://javafx.com/javafx/15.0.1" xmlns:fx="http://javafx.com/fxml/1" fx:controller="airbooks.controller.StudentController">
    <top>
       <GridPane style="-fx-background-color: lightcyan; -fx-border-width: 0 0 1 0; -fx-border-color: black;" BorderPane.alignment="CENTER">
          <columnConstraints>
@@ -55,7 +55,7 @@
                <Font size="17.0" />
             </font>
          </Label>
-         <ScrollPane hbarPolicy="NEVER" maxWidth="-Infinity" minWidth="-Infinity" prefHeight="500.0" vbarPolicy="NEVER">
+         <ScrollPane hbarPolicy="NEVER" maxWidth="-Infinity" minWidth="-Infinity" prefHeight="450.0" vbarPolicy="NEVER">
             <VBox.margin>
                <Insets bottom="5.0" left="10.0" right="10.0" top="5.0" />
             </VBox.margin>
@@ -98,7 +98,7 @@
                      <Insets bottom="5.0" top="3.0" />
                   </VBox.margin>
                </ComboBox>
-               <ScrollPane hbarPolicy="NEVER" maxHeight="-Infinity" prefHeight="450.0" vbarPolicy="NEVER">
+               <ScrollPane hbarPolicy="NEVER" maxHeight="-Infinity" prefHeight="430.0" vbarPolicy="NEVER">
                   <VBox.margin>
                      <Insets top="10.0" />
                   </VBox.margin>
